--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -131,7 +131,7 @@
             </a>
             <ul class="menu-sub">
                 <li class="menu-item" id="kur" style="display: @ViewBag.DisplayKur">
-                    <a href="@Url.Action("Kur", "Finans")" class="menu-link">
+                    <a href="@Url.Action("Index", "Finans")" class="menu-link">
                         <div data-i18n="Without menu">Kur Yönetimi</div>
                     </a>
                 </li>
