--- a/NOVA/Views/Profil/Index.cshtml
+++ b/NOVA/Views/Profil/Index.cshtml
@@ -82,26 +82,7 @@
                         </form>
                         <div class="row">
                             <div class="col">
-                                @using (Html.BeginForm("ChangePassword", "Home", FormMethod.Post, new { @id = "myForm" }))
-                                {
-
-                                    <div class="form-group">
-                                        <label>Eski Şifre:</label>
-                                        @Html.TextBoxFor(m => m.PasswordChange.OLD_PASSWORD, new { @class = "form-control" })
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label>Yeni Şifre:</label>
-                                        @Html.TextBoxFor(m => m.PasswordChange.NEW_PASSWORD, new { @class = "form-control", @minlength = "6" })
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Yeni Şifre Tekrar:</label>
-                                        @Html.TextBoxFor(m => m.PasswordChange.NEW_PASSWORD_REPEAT, new { @class = "form-control", @minlength = "6" })
-                                    </div>
-
-                                    <button type="submit" class="ekle btn btn-outline-info mt-2">DEĞİŞTİR</button>
-
-                                }
+                                <button class="btn btn-info" onclick="location.href='@Url.Action("SendPasswordMail", "Profil")'">Şifre için Mail Gönder</button>
                             </div>
                             <div class="col-8">
 
