--- a/NOVA/Views/Shared/_Layout_Satin_Alma.cshtml
+++ b/NOVA/Views/Shared/_Layout_Satin_Alma.cshtml
@@ -37,25 +37,11 @@
     <script type="text/javascript" src="\assets\js\config.js"></script>
     <script src="/Scripts/jquery.validate.js" type='text/javascript'></script>
     <script src="/Scripts/jquery.validate.unobtrusive.js" type='text/javascript'></script>
-    <script>
-       
-        var listfk = [];
-        var list = [];
-        var listEfece4 = [];
-        var excellist = [];
-        var tumliste2 = null;
-        var sabit = 0;
-        async function getExcelAsync() {
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.css" rel="stylesheet">
 
-            let response = await fetch(`http://192.168.2.13:83/api/exceltest/stok`);
-            let data = await response.json()
-            return data;
-        }
-       
-        
-    </script>
 </head>
-<body style="overflow-x:hidden">
+<body>
 
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
@@ -103,8 +89,9 @@
                         </div>
                     </div>
                 </div>
-                
+
                 @RenderBody()
+
                 <!-- / Content -->
                 <!-- Footer -->
                 <footer class="content-footer footer bg-footer-theme mb-0">
@@ -126,7 +113,6 @@
         <!-- / Layout page -->
     </div>
 
-    <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
     <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/bootstrap-table.min.js"></script>
@@ -136,9 +122,12 @@
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/sticky-header/bootstrap-table-sticky-header.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/fixed-columns/bootstrap-table-fixed-columns.js"></script>
-   
+    <script src="https://cdn.jsdelivr.net/npm/tablednd@1.0.5/dist/jquery.tablednd.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.2/dist/extensions/reorder-rows/bootstrap-table-reorder-rows.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/group-by-v2/bootstrap-table-group-by.min.js"></script>
     <script src="~/jsPDF/jspdf.umd.min.js"></script>
     <script src="~/jsPDF/polyfills.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.core.min.js"></script>
 
 
     <!-- Core JS -->
@@ -149,7 +138,6 @@
     <!-- endbuild -->
     <!-- Main JS -->
     <script type="text/javascript" src="/assets/js/main.js"></script>
-
     <!-- Page JS -->
     <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
 
